--- a/vivino_analysis.ipynb
+++ b/vivino_analysis.ipynb
@@ -15,7 +15,7 @@
    "source": [
     "import sqlite3\n",
     "connexion = sqlite3.connect(\"./data/vivino.db\")\n",
-    "cursor = connexion.cursor()"
+    "cursor = connexion.cursor()hvh"
    ]
   }
  ],
