--- a/vivino_wouter.ipynb
+++ b/vivino_wouter.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 78,
    "metadata": {},
    "outputs": [
     {
@@ -56,15 +56,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 77,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "('us', 12273684)\n",
+      "('fr', 5973301)\n",
+      "('it', 4270717)\n",
+      "('de', 2549989)\n",
+      "('es', 2264396)\n",
+      "('ch', 1601799)\n",
+      "('pt', 1123535)\n",
+      "('au', 1022965)\n",
+      "('ar', 629532)\n",
+      "('cl', 326757)\n",
+      "('za', 269649)\n",
+      "('ro', 228185)\n",
+      "('il', 150549)\n",
+      "('hu', 102235)\n",
+      "('gr', 95693)\n",
+      "('hr', 64223)\n",
+      "('md', 13583)\n"
+     ]
+    }
+   ],
    "source": [
-    "\"\"\"\"We have a marketing budget for this year. Which country should we prioritise and why?\"\"\"\n",
+    "\"\"\"\"We have a marketing budget for this year. Which country should we prioritise and why?\n",
+    "- Those with high user count?\n",
+    "- those we low user count?\n",
+    "- Those with a upcomming user popularity\"\"\"\n",
     "connection = sqlite3.connect(db_path)\n",
     "cursor = connection.cursor()\n",
     "\n",
-    "cursor.execute(''' \n",
+    "cursor.execute('''  SELECT c.code ,c.users_count FROM countries c \n",
+    "                    ORDER BY c.users_count DESC\n",
     "                ''')\n",
     "\n",
     "rows = cursor.fetchall()\n",
@@ -78,7 +106,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\"\"\"\"We would like to give awards to the best wineries. Come up with 3 relevant ones. Which wineries should we choose and why? Be creative ;)\"\"\"\n",
+    "\n",
+    "connection = sqlite3.connect(db_path)\n",
+    "cursor = connection.cursor()\n",
+    "\n",
+    "cursor.execute(''' \n",
+    "                ''')\n",
+    "\n",
+    "rows = cursor.fetchall()\n",
+    "\n",
+    "for row in rows:\n",
+    "    print(row)\n",
+    "\n",
+    "connection.close()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 82,
    "metadata": {},
    "outputs": [
     {
