--- a/vivino_wouter.ipynb
+++ b/vivino_wouter.ipynb
@@ -2,17 +2,18 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 89,
    "metadata": {},
    "outputs": [],
    "source": [
     "import sqlite3\n",
+    "import streamlit\n",
     "db_path = r'data\\vivino.db'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 90,
    "metadata": {},
    "outputs": [
     {
@@ -56,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 91,
    "metadata": {},
    "outputs": [
     {
@@ -106,7 +107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 92,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -128,7 +129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 93,
    "metadata": {},
    "outputs": [
     {
@@ -1610,7 +1611,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 94,
    "metadata": {},
    "outputs": [
     {
@@ -2651,6 +2652,47 @@
     "for row in rows:\n",
     "    print(row)\n",
     "\n",
+    "\n",
+    "connection.close()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 110,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "('Cabernet Sauvignon', 'Cabernet Sauvignon', 4.8)\n",
+      "('Cabernet Sauvignon', 'Mágico', 4.8)\n",
+      "('Cabernet Sauvignon', 'IX Estate Red', 4.7)\n",
+      "('Cabernet Sauvignon', 'Special Selection Cabernet Sauvignon', 4.7)\n",
+      "('Cabernet Sauvignon', 'Unico Reserva Especial Edición', 4.7)\n"
+     ]
+    }
+   ],
+   "source": [
+    "\"\"\"\"Nice to have features\"\"\"\n",
+    "\"\"\"One of our VIP client likes Cabernet Sauvignon and would like our top 5 recommendations. Which wines would you recommend to him?\"\"\"\n",
+    "\n",
+    "connection = sqlite3.connect(db_path)\n",
+    "cursor = connection.cursor()\n",
+    "cursor = connection.cursor()\n",
+    "cursor.execute('''  SELECT g.name,w.name,w.ratings_average FROM wines w\n",
+    "                    JOIN regions r ON w.region_id = r.id\n",
+    "                    JOIN countries c ON c.code =  r.country_code\n",
+    "                    JOIN most_used_grapes_per_country mugp ON mugp.country_code = c.code\n",
+    "                    JOIN grapes g ON g.id = mugp.grape_id\n",
+    "                    WHERE g.name = \"Cabernet Sauvignon\"\n",
+    "                    ORDER BY w.ratings_average DESC\n",
+    "                    LIMIT 5\n",
+    "''')\n",
+    "rows = cursor.fetchall()\n",
+    "\n",
+    "for row in rows:\n",
+    "    print(row)\n",
     "\n",
     "connection.close()"
    ]
