--- a/notebooks/vivino_analysis_moni.ipynb
+++ b/notebooks/vivino_analysis_moni.ipynb
@@ -9,13 +9,56 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "import sqlite3\n",
-    "connexion = sqlite3.connect(\"./data/vivino.db\")\n",
-    "cursor = connexion.cursor()hvh"
+    "connexion = sqlite3.connect(\"../data/vivino.db\")\n",
+    "cursor = connexion.cursor()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[('Cabernet Sauvignon', 4.6, 157944, 6325),\n",
+       " ('Brut Champagne', 4.6, 146377, 13491),\n",
+       " ('Tignanello', 4.5, 142513, 8219),\n",
+       " ('Sassicaia', 4.6, 107646, 2210),\n",
+       " ('60 Sessantanni Old Vines Primitivo di Manduria', 4.5, 94289, 2765),\n",
+       " ('Costasera Amarone della Valpolicella Classico', 4.3, 93397, 2036),\n",
+       " ('ARTEMIS Cabernet Sauvignon', 4.4, 81351, 3174),\n",
+       " ('Amarone della Valpolicella Classico', 4.3, 77515, 1605),\n",
+       " ('Opus One', 4.6, 77053, 1152),\n",
+       " ('Pauillac (Premier Grand Cru Classé)', 4.6, 73615, 2431)]"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "query1 = \"\"\"\n",
+    "    SELECT \n",
+    "        wines.name, \n",
+    "        wines.ratings_average,\n",
+    "        wines.ratings_count,\n",
+    "        wines.user_structure_count\n",
+    "    FROM\n",
+    "        wines\n",
+    "    ORDER BY\n",
+    "       wines.ratings_count DESC, wines.ratings_average DESC\n",
+    "    LIMIT 10; \n",
+    "    \"\"\"\n",
+    "\n",
+    "cursor.execute(query1)\n",
+    "cursor.fetchall()"
    ]
   }
  ],
