--- a/notebooks/vivino_wouter.ipynb
+++ b/notebooks/vivino_wouter.ipynb
@@ -2,17 +2,17 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
     "import sqlite3\n",
-    "db_path = r'data\\vivino.db'"
+    "db_path = r'..\\data\\vivino.db'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -2672,7 +2672,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "-1.-1.-1"
+   "version": "3.11.4"
   },
   "orig_nbformat": 4
  },
