vivino_analysis_combination : quest #5 answered

--- a/notebooks/vivino_analysis_combination.ipynb
+++ b/notebooks/vivino_analysis_combination.ipynb
@@ -2135,6 +2135,411 @@
     " 4. Ribera del Duero - Ribera del Duero - Spain\n",
     " 5. Almaviva - Puente Alto - Chili"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## QUESTION 5\n",
+    "\n",
+    "We would to give create a country leaderboard,\n",
+    "give us a visual that shows the average wine rating for each country"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "LEADERBOARD CATEGORIES\n",
+    "1. Countries with the highest count of top-rated wines (young wines, vintage wines)\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 96,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2023-08-30 18:13:48,842 INFO sqlalchemy.engine.Engine \n",
+      "    SELECT\n",
+      "        countries.name AS country_name,\n",
+      "        count(wines.name) AS wine_count,\n",
+      "        avg(wines.ratings_average) AS avg_rating,\n",
+      "        sum(wines.ratings_count) AS total_reviews\n",
+      "    FROM\n",
+      "        wines\n",
+      "    INNER JOIN regions ON wines.region_id = regions.id\n",
+      "    INNER JOIN countries ON regions.country_code = countries.code\n",
+      "    GROUP BY countries.name\n",
+      "    HAVING\n",
+      "        avg_rating >= 4.4\n",
+      "    ORDER BY total_reviews DESC;\n",
+      "    \n",
+      "2023-08-30 18:13:48,842 INFO sqlalchemy.engine.Engine [raw sql] ()\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>country_name</th>\n",
+       "      <th>wine_count</th>\n",
+       "      <th>avg_rating</th>\n",
+       "      <th>total_reviews</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Italie</td>\n",
+       "      <td>383</td>\n",
+       "      <td>4.430026</td>\n",
+       "      <td>2135839</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>France</td>\n",
+       "      <td>331</td>\n",
+       "      <td>4.447130</td>\n",
+       "      <td>2124809</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>États-Unis</td>\n",
+       "      <td>74</td>\n",
+       "      <td>4.490541</td>\n",
+       "      <td>834263</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Espagne</td>\n",
+       "      <td>94</td>\n",
+       "      <td>4.443617</td>\n",
+       "      <td>746710</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Argentine</td>\n",
+       "      <td>23</td>\n",
+       "      <td>4.417391</td>\n",
+       "      <td>283673</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>Chili</td>\n",
+       "      <td>16</td>\n",
+       "      <td>4.431250</td>\n",
+       "      <td>159256</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>Portugal</td>\n",
+       "      <td>28</td>\n",
+       "      <td>4.435714</td>\n",
+       "      <td>62454</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>Afrique du Sud</td>\n",
+       "      <td>22</td>\n",
+       "      <td>4.459091</td>\n",
+       "      <td>59995</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>Australie</td>\n",
+       "      <td>12</td>\n",
+       "      <td>4.458333</td>\n",
+       "      <td>52138</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>Hongrie</td>\n",
+       "      <td>11</td>\n",
+       "      <td>4.472727</td>\n",
+       "      <td>30564</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>Moldavie</td>\n",
+       "      <td>5</td>\n",
+       "      <td>4.480000</td>\n",
+       "      <td>14114</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>Allemagne</td>\n",
+       "      <td>14</td>\n",
+       "      <td>4.500000</td>\n",
+       "      <td>8257</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12</th>\n",
+       "      <td>Israël</td>\n",
+       "      <td>1</td>\n",
+       "      <td>4.500000</td>\n",
+       "      <td>894</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13</th>\n",
+       "      <td>Grèce</td>\n",
+       "      <td>2</td>\n",
+       "      <td>4.400000</td>\n",
+       "      <td>610</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14</th>\n",
+       "      <td>Roumanie</td>\n",
+       "      <td>1</td>\n",
+       "      <td>4.400000</td>\n",
+       "      <td>166</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      country_name  wine_count  avg_rating  total_reviews\n",
+       "0           Italie         383    4.430026        2135839\n",
+       "1           France         331    4.447130        2124809\n",
+       "2       États-Unis          74    4.490541         834263\n",
+       "3          Espagne          94    4.443617         746710\n",
+       "4        Argentine          23    4.417391         283673\n",
+       "5            Chili          16    4.431250         159256\n",
+       "6         Portugal          28    4.435714          62454\n",
+       "7   Afrique du Sud          22    4.459091          59995\n",
+       "8        Australie          12    4.458333          52138\n",
+       "9          Hongrie          11    4.472727          30564\n",
+       "10        Moldavie           5    4.480000          14114\n",
+       "11       Allemagne          14    4.500000           8257\n",
+       "12          Israël           1    4.500000            894\n",
+       "13           Grèce           2    4.400000            610\n",
+       "14        Roumanie           1    4.400000            166"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "# Identify countries with highest count of top - rated young wines\n",
+    "query_retail_wines = vivino_engine.execute(\n",
+    "    \"\"\"\n",
+    "    SELECT\n",
+    "        countries.name AS country_name,\n",
+    "        count(wines.name) AS wine_count,\n",
+    "        avg(wines.ratings_average) AS avg_rating,\n",
+    "        sum(wines.ratings_count) AS total_reviews\n",
+    "    FROM\n",
+    "        wines\n",
+    "    INNER JOIN regions ON wines.region_id = regions.id\n",
+    "    INNER JOIN countries ON regions.country_code = countries.code\n",
+    "    GROUP BY countries.name\n",
+    "    HAVING\n",
+    "        avg_rating >= 4.4\n",
+    "    ORDER BY total_reviews DESC;\n",
+    "    \"\"\"\n",
+    ")\n",
+    "\n",
+    "# initialize retail_wines_df\n",
+    "fetch_query_retail_wines = query_retail_wines.fetchall()\n",
+    "retail_wines_df = pd.DataFrame(\n",
+    "    fetch_query_retail_wines,\n",
+    "    columns=query_retail_wines.keys()\n",
+    ")\n",
+    "\n",
+    "# display retail_wines_df\n",
+    "display(retail_wines_df)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 84,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2023-08-30 17:49:07,558 INFO sqlalchemy.engine.Engine \n",
+      "SELECT\n",
+      "    countries.name AS country_name, \n",
+      "    avg(rank) AS avg_rank,\n",
+      "    count(vintages.name) as vintage_count,\n",
+      "    avg(vintages.ratings_average) AS avg_rating,\n",
+      "    sum(vintages.ratings_count) AS total_reviews,\n",
+      "    avg(vintages.price_euros) AS retail_price_euros    \n",
+      "FROM vintages\n",
+      "LEFT JOIN wines ON vintages.wine_id = wines.id\n",
+      "LEFT JOIN regions ON wines.region_id = regions.id\n",
+      "LEFT JOIN countries ON regions.country_code = countries.code\n",
+      "INNER JOIN vintage_toplists_rankings ON vintages.id = vintage_toplists_rankings.vintage_id\n",
+      "WHERE vintages.ratings_count >= 3000\n",
+      "    AND vintages.ratings_average >= 4.5\n",
+      "    AND vintage_toplists_rankings.rank = vintage_toplists_rankings.previous_rank\n",
+      "    AND (vintage_toplists_rankings.rank <= 10 OR vintage_toplists_rankings.previous_rank <= 10)\n",
+      "GROUP BY vintages.wine_id \n",
+      "ORDER BY avg_rank ASC;\n",
+      "\n",
+      "2023-08-30 17:49:07,560 INFO sqlalchemy.engine.Engine [raw sql] ()\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>country_name</th>\n",
+       "      <th>avg_rank</th>\n",
+       "      <th>vintage_count</th>\n",
+       "      <th>avg_rating</th>\n",
+       "      <th>total_reviews</th>\n",
+       "      <th>retail_price_euros</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>France</td>\n",
+       "      <td>5.5</td>\n",
+       "      <td>2</td>\n",
+       "      <td>4.7</td>\n",
+       "      <td>6550</td>\n",
+       "      <td>597.5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>France</td>\n",
+       "      <td>6.0</td>\n",
+       "      <td>3</td>\n",
+       "      <td>4.6</td>\n",
+       "      <td>10815</td>\n",
+       "      <td>349.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>France</td>\n",
+       "      <td>6.0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>4.6</td>\n",
+       "      <td>28513</td>\n",
+       "      <td>245.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>France</td>\n",
+       "      <td>9.5</td>\n",
+       "      <td>2</td>\n",
+       "      <td>4.5</td>\n",
+       "      <td>19648</td>\n",
+       "      <td>183.7</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Italie</td>\n",
+       "      <td>10.0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>4.6</td>\n",
+       "      <td>13709</td>\n",
+       "      <td>420.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  country_name  avg_rank  vintage_count  avg_rating  total_reviews  \\\n",
+       "0       France       5.5              2         4.7           6550   \n",
+       "1       France       6.0              3         4.6          10815   \n",
+       "2       France       6.0              1         4.6          28513   \n",
+       "3       France       9.5              2         4.5          19648   \n",
+       "4       Italie      10.0              1         4.6          13709   \n",
+       "\n",
+       "   retail_price_euros  \n",
+       "0               597.5  \n",
+       "1               349.0  \n",
+       "2               245.0  \n",
+       "3               183.7  \n",
+       "4               420.0  "
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "# Identify countries with highest count of top - rated vintage wines\n",
+    "query_country_vintages = vivino_engine.execute(\n",
+    "    \"\"\"\n",
+    "SELECT\n",
+    "    countries.name AS country_name, \n",
+    "    avg(rank) AS avg_rank,\n",
+    "    count(vintages.name) as vintage_count,\n",
+    "    avg(vintages.ratings_average) AS avg_rating,\n",
+    "    sum(vintages.ratings_count) AS total_reviews,\n",
+    "    avg(vintages.price_euros) AS retail_price_euros    \n",
+    "FROM vintages\n",
+    "LEFT JOIN wines ON vintages.wine_id = wines.id\n",
+    "LEFT JOIN regions ON wines.region_id = regions.id\n",
+    "LEFT JOIN countries ON regions.country_code = countries.code\n",
+    "INNER JOIN vintage_toplists_rankings ON vintages.id = vintage_toplists_rankings.vintage_id\n",
+    "WHERE vintages.ratings_count >= 3000\n",
+    "    AND vintages.ratings_average >= 4.5\n",
+    "    AND vintage_toplists_rankings.rank = vintage_toplists_rankings.previous_rank\n",
+    "    AND (vintage_toplists_rankings.rank <= 10 OR vintage_toplists_rankings.previous_rank <= 10)\n",
+    "GROUP BY vintages.wine_id \n",
+    "ORDER BY avg_rank ASC;\n",
+    "\"\"\"\n",
+    ")\n",
+    "\n",
+    "# initialize country_vintages_df\n",
+    "fetch_query_country_vintages = query_country_vintages.fetchall()\n",
+    "country_vintages_df = pd.DataFrame(\n",
+    "    fetch_query_country_vintages,\n",
+    "    columns=query_country_vintages.keys()\n",
+    ")\n",
+    "\n",
+    "# display country_vintages_df\n",
+    "display(country_vintages_df)\n",
+    "\n"
+   ]
   }
  ],
  "metadata": {
